tests/api/reference/negative/08-invalid-file-alignment.asm
region.file_align(3)
